--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -13,6 +13,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline "
    ]
   },
@@ -26,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = requests.get('https://coinmarketcap.com/') \n",
@@ -42,7 +45,9 @@
   {
    "cell_type": "code",
    "execution_count": 371,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#  Fixes up CionMarketCaps non-standard links :/\n",
